--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="dialog_base_check">확인</string>
     <string name="dialog_base_cancel">취소</string>
 
+    <string name="tripcourse_title_name">여행발자국</string>
+
+    <string name="tripcourse_tripTitle">여행 제목</string>
+
+
 </resources>
