--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,17 @@
     <string name="user_signup">회원가입</string>
     <string name="user_find_password">비밀번호를 잊으셨나요?</string>
 
+    //activity_trip
+    <string name="trip_title">제목을 입력해주세요.</string>
+    <string name="trip_region">지역을 입력해주세요.</string>
+    <string name="trip_date">여행기간을 입력해주세요.</string>
+    <string name="trip_photo">여행의 대표 사진을 등록해주세요.</string>
+    <string name="trip_theme">여행의 발자국 테마를 선택해주세요.</string>
+    <string name="trip_theme_list">현재 보유한 테마 목록</string>
+    <string name="trip_theme_1">기본</string>
+    <string name="trip_theme_2">겨울</string>
+    <string name="trip_theme_3">다꾸</string>
+    <string name="trip_theme_4">추후 추가 예정</string>
+    <string name="trip_photo_upload">이곳을 눌러 사진을 첨부해주세요.</string>
+
 </resources>
