--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="app_slogan">쉽게 쓰는 여행 다이어리</string>
     <string name="dialog_base_check">확인</string>
     <string name="dialog_base_cancel">취소</string>
+    <string name="topbar_title">상단바 제목</string>
+    <string name="topbar_subtitle">상단바 부제목</string>
 
     //activity_tripcourse
     <string name="tripcourse_title">여행 발자국</string>
@@ -76,11 +78,12 @@
     <string name="user_signup_done_write_btn">트립북 쓰러가기</string>
 
     //activity_trip
-    <string name="trip_title">제목을 입력해주세요.</string>
-    <string name="trip_region">지역을 입력해주세요.</string>
-    <string name="trip_date">여행 기간을 입력해주세요.</string>
-    <string name="trip_photo">여행의 대표 사진을 등록해주세요.</string>
-    <string name="trip_theme">여행의 발자국 테마를 선택해주세요.</string>
+    <string name="trip_title">여행 기록하기</string>
+    <string name="trip_title_tv">제목을 입력해주세요.</string>
+    <string name="trip_region_tv">지역을 입력해주세요.</string>
+    <string name="trip_date_tv">여행 기간을 입력해주세요.</string>
+    <string name="trip_photo_tv">여행의 대표 사진을 등록해주세요.</string>
+    <string name="trip_theme_tv">여행의 발자국 테마를 선택해주세요.</string>
     <string name="trip_theme_list">현재 보유한 테마 목록</string>
     <string name="trip_theme_1">기본</string>
     <string name="trip_theme_2">겨울</string>
