--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="user_signin_guide_message_1">카카오 계정으로 로그인하면\n간단하게 트립북 서비스를 즐길 수 있어요.</string>
     <string name="user_signin_guide_message_2">카카오 계정이 없으세요?</string>
     <string name="user_signin_guide_message_3">카카오계정사이트(accounts.kakao.com)에서\n계정을 생성한 후 트립북을 이용하실 수 있어요.</string>
+    <string name="user_profile_greeting">안녕하세요!</string>
 
     //activity_trip
     <string name="trip_title">여행 기록하기</string>
